--- a/packages/ui/src/styles/global.css
+++ b/packages/ui/src/styles/global.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper-wrapper {
+  max-width: 250px;
+}
+.swiper-slide {
+  max-width: 250px !important;
+}
+
+@media screen and (min-width: 1024px) {
+  .swiper-slide {
+    max-width: 450px !important;
+  }
+  .swiper-wrapper {
+    max-width: 450px !important;
+  }
+}
