updated the profile carousel and profile card & adjusted the styling for swiper.

--- a/packages/ui/src/styles/global.css
+++ b/packages/ui/src/styles/global.css
@@ -2,13 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+.tool-carousel{
+
+  .swiper-slide {
+    max-width: 450px !important;
+  }
+  .swiper-wrapper {
+    max-width: 450px !important;
+  }
+
+
+}
+
+
+.profile-carousel{
+
 .swiper-wrapper {
-  max-width: 250px;
+  max-width: 200px;
+}
+.swiper-slide {
+  max-width: 200px !important;
 }
 
 @media screen and (min-width: 1024px) {
   .swiper-slide {
-    max-width: 250px !important;
+    max-width: 200px !important;
   }
-
+  .swiper-wrapper {
+    max-width: 200px !important;
+  }
+}
 }
