create recent orders carousel

--- a/packages/ui/src/styles/global.css
+++ b/packages/ui/src/styles/global.css
@@ -2,34 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-.tool-carousel{
-
-  .swiper-slide {
-    max-width: 450px !important;
-  }
+.tool-carousel,
+.recent-order-carousel {
   .swiper-wrapper {
     max-width: 450px !important;
   }
-
-
 }
 
-
-.profile-carousel{
-
-.swiper-wrapper {
-  max-width: 200px;
-}
-.swiper-slide {
-  max-width: 200px !important;
-}
-
-@media screen and (min-width: 1024px) {
+.profile-carousel {
+  .swiper-wrapper {
+    max-width: 200px;
+  }
   .swiper-slide {
     max-width: 200px !important;
   }
-  .swiper-wrapper {
-    max-width: 200px !important;
+
+  @media screen and (min-width: 1024px) {
+    .swiper-slide {
+      max-width: 200px !important;
+    }
+    .swiper-wrapper {
+      max-width: 200px !important;
+    }
   }
-}
 }
